gccida/c2/print_rtl_graph_with_bb
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:721:4: error: expected ';' after expression
rtx v26; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:721:5: error: use of undeclared identifier 'v26'
rtx v26; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:722:1: error: must use 'enum' tag to refer to type 'graph_dump_types'
graph_dump_types v27; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:738:4: error: expected ';' after expression
rtx v43; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:738:5: error: use of undeclared identifier 'v43'
rtx v43; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:740:6: error: use of undeclared identifier 'v45'
rtx *v45; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:754:25: error: expected expression
print_rtl_graph_with_bb::bb_state *in_bb_p; // [rsp+8h] [rbp-58h] 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:759:4: error: expected ';' after expression
rtx tmp_rtx; // [rsp+30h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:759:5: error: use of undeclared identifier 'tmp_rtx'
rtx tmp_rtx; // [rsp+30h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:761:1: error: use of undeclared identifier 'tmp_rtx'
tmp_rtx = rtx_first; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:780:6: error: use of undeclared identifier 'tmp_rtx'
if ( tmp_rtx ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:823:7: error: use of undeclared identifier 'tmp_rtx'
rtx = tmp_rtx[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:826:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)v15; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:826:36: error: expected ')'
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)v15; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:826:11: note: to match this '('
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)v15; 
          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:830:1: error: use of undeclared identifier 'tmp_rtx'
tmp_rtx = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:835:54: error: use of undeclared identifier 'tmp_rtx'
if ( ( v14[rtint] & 0x80000000) != 0 && ( *( _WORD *)tmp_rtx == 35 || *( _WORD *)tmp_rtx == 37) ) 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:835:82: error: use of undeclared identifier 'tmp_rtx'
if ( ( v14[rtint] & 0x80000000) != 0 && ( *( _WORD *)tmp_rtx == 35 || *( _WORD *)tmp_rtx == 37) ) 
                                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:857:1: error: use of undeclared identifier 'tmp_rtx'
tmp_rtx->fld[0].rtuint, 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/graph.c:863:1: error: use of undeclared identifier 'v26'
v26 = tmp_rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtl_graph_with_bb/src/obj/graph.o] Error 1
